# ftb_s3_handler

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.fromgcs  README.md  pyproject.toml
ftb_s3_handler/: gcs_client.py  gcs_to_s3.py  main.py  path_handler.py  s3_client.py  utils.py
tests/: s3_client_test.py  utils_test.py
