[project]
name = "ftb-s3-handler"
version = "0.1.0"
description = ""
authors = [
    {name = "Art0rStalse",email = "arthur.fernandes@stalse.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "boto3 (>=1.40.51,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "polars (>=1.34.0,<2.0.0)",
    "boto3-stubs[full] (>=1.40.51,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
